--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -16,7 +16,7 @@
   }
   
 html, body {
-    height: 100%;
+    // height: 100%;
     width: 100%;
 }
 body{
@@ -30,12 +30,17 @@ body{
     line-height: 1.5;
     min-height: 100%;
     background-color:$black;
+    margin-top:126px;
     @media #{$max-xxl}{
         font-size: 16px;
     }
     @media #{$max-md}{
         font-size: 14px;
     }
+    @media #{$max-xxxl}{
+        margin-top: 82px;
+    }
+    
 }
 
 // ::-webkit-scrollbar-track
