--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2682,3 +2682,8 @@ input[type=number]::-webkit-outer-spin-button {
         margin-right: 0;
     }
 }
+
+// .custom-w{
+//     width:334px;
+//     max-width: 100%;
+// }
