--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2286,6 +2286,8 @@ input{
     width: 100%;
     z-index: 2;
     background: rgba(0, 0, 0, 0.4);
+    // overflow: hidden;
+    // z-index: 9999;
 }
 .loading-spinner{
     position: absolute;
