--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -546,7 +546,7 @@ color:$green-color;
 }
 .box-head{
     background: $black;
-    padding: 20px 35px 20px 20px;
+    padding: 15px;
     position: relative;
 }
 .box{
