--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2728,8 +2728,10 @@ input[type=number]::-webkit-outer-spin-button {
     }
 }
 .fixm-height{
-    height:430px;
-    overflow:hidden !important;
+    @media #{$max-xxl}{
+        height:430px;
+        overflow:hidden !important;
+    }
 }
 .transac-card{
     .top-sec {
