text updated on popup

--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -47,6 +47,7 @@ body{
     @media (max-width:360.98px){
         margin-top: 48.95px;
     }
+    padding-right: 0 !important;
 }
 
 // ::-webkit-scrollbar-track
