--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -18,6 +18,7 @@
     left: 0;
     right: 0;
     z-index: 999;
+    background:$darkbg;
     .dd-ico{
         .nav-link{
             padding: 0.5rem 1rem;
